# stream-fusion

./: .dockerignore  .gitignore  404.html  CNAME  DOCS_VERSION  Dockerfile  LICENSE  README.md  alembic.ini  entrypoint.sh  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy-mkdocs.yml  docker-community.yml  docker-develop.yml  docker-release.yml  docker-v2-beta.yml
Catalogs/catalogs/: index.html
Catalogs/docker_install/: index.html
Catalogs/prerequis/: index.html
How-To/apikey_alldebrid/: index.html
How-To/secure_vps/: index.html
Manager/manager/: index.html
Manager/usage/: index.html
StreamFusion/config_advanced/: index.html
StreamFusion/docker_install/: index.html
StreamFusion/post_install/: index.html
StreamFusion/prerequis/: index.html
StreamFusion/proxy_npm/: index.html
StreamFusion/streamfusion/: index.html
Stremio/addons/: index.html
Stremio/selfhosted/: index.html
Stremio/stremio/: index.html
Trakt/docker_install/: index.html
Trakt/prerequis/: index.html
Trakt/trakt/: index.html
deploy/: catalogs-compose.yml  catalogs.env  dev-compose.yml  docker-compose.yml  example.env  manager-compose.yml  trakt-compose.yml  trakt.env
docs/: DOCS_VERSION
docs/en/: .pages  index.md
docs/en/Catalogs/: .pages  catalogs.md  docker_install.md  prerequis.md
docs/en/How-To/: .pages  apikey_alldebrid.md  secure_vps.md
docs/en/Manager/: .pages  manager.md  usage.md
docs/en/StreamFusion/: .pages  config_advanced.md  docker_install.md  post_install.md  prerequis.md  proxy_npm.md  streamfusion.md
docs/en/Stremio/: .pages  addons.md  selfhosted.md  stremio.md
docs/en/Trakt/: .pages  docker_install.md  prerequis.md  trakt.md
docs/fr/: .pages  index.md
docs/fr/Catalogs/: .pages  catalogs.md  docker_install.md  prerequis.md
docs/fr/How-To/: .pages  apikey_alldebrid.md  secure_vps.md
docs/fr/Manager/: .pages  manager.md  usage.md
docs/fr/StreamFusion/: .pages  post_install.md  (+5 more)
docs/stylesheets/: extra.css
en/: index.html
search/: search_index.json
stream_fusion/: __init__.py  __main__.py  constants.py  gunicorn_runner.py  logging_config.py  settings.py  version.py
stream_fusion/static/: config.js  index.html
stream_fusion/templates/: config.js  index.html
stream_fusion/utils/: detection.py  filter_results.py  general.py  parse_config.py
stream_fusion/web/: __init__.py  application.py  lifespan.py  lifetime.py
stylesheets/: extra.css
(+133 files in other folders)
