[tool.poetry]
name = "stream-fusion"
version = "2.2.1"
description = "StreamFusion is an advanced plugin for Stremio that significantly enhances its streaming capabilities with debrid service."
authors = ["LimeDrive <limecat@limedrive.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
starlette = "^0.37.2"
requests = "^2.32.3"
bencode-py = "^4.0.0"
jinja2 = "^3.1.4"
aiocron = "^1.8"
python-dotenv = "^1.0.1"
cachetools = "^5.3.3"
redis = "^5.0.7"
aiohttp = "^3.9.5"
gunicorn = "^22.0.0"
loguru = "^0.7.2"
stackprinter = "^0.2.12"
pydantic-settings = "^2.3.4"
sqlalchemy = {version = "^2.0.31", extras = ["asyncio"]}
asyncpg = {version = "^0.29.0", extras = ["sa"]}
aiosqlite = "^0.20.0"
toml = "^0.10.2"
jsonpickle = "^3.2.2"
fastapi-simple-rate-limiter = "^0.0.4"
itsdangerous = "^2.2.0"
email-validator = "^2.2.0"
requests-ratelimiter = "^0.7.0"
timeout-decorator = "^0.5.0"
tenacity = "^8.5.0"
aiohttp-socks = "^0.8.4"
tmdbv3api = "^1.9.0"
rank-torrent-name = "^1.2.0"
orjson = "^3.10.7"
alembic = "^1.13.2"
ujson = "^5.10.0"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.36"
mkdocs-static-i18n = "^1.2.3"
mkdocs-macros-plugin = "^1.2.0"
mkdocs-awesome-pages-plugin = "^2.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
